Updates on My Works data

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       crossorigin="anonymous"
     ></script>
     <!-- Custom Stylesheet -->
-    <link href="css/main.css?v2" rel="stylesheet" />
+    <link href="css/main.css?v3" rel="stylesheet" />
   </head>
 
   <body>
@@ -250,14 +250,14 @@
               <h3 class="subtitle mgb40">What I Use</h3>
               <ul id="tool-list">
                 <li>Windows</li>
-                <li>Visual Studio Code, Brackets, Atom</li>
+                <li>Visual Studio Code, Brackets, Sublime Text</li>
                 <li>
                   Figma, InVision, Adobe XD, Adobe Photoshop, Adobe Illustrator
                 </li>
-                <li>Git, GitBash, GitHub, GitLab</li>
+                <li>Bitbucket, Git, GitBash, GitHub, GitLab</li>
                 <li>XAMPP</li>
-                <li>Fiddler, Proto, Principle, MJML</li>
-                <li>Pine tools, Tawk, Drift</li>
+                <li>Fiddler, Proto, Principle, MJML, Chrome Dev Tools</li>
+                <li>Pine tools, CodePen, Flaticons, WAVE, Npm</li>
                 <li>Pingdom, GTmetrix, Google Analytics</li>
                 <li>Teams, Slack, Trello</li>
                 <li>MS Office Suite, Google Docs</li>
@@ -287,7 +287,7 @@
                       <i class="fa-mine fa fa-desktop"></i>
                     </div>
                     <div class="exp-head">
-                      <p class="time-frame">2017 - PRESENT</p>
+                      <p class="time-frame">2016 - PRESENT</p>
                       <h3>
                         <a
                           href="https://www.six30labs.io/"
@@ -430,6 +430,7 @@
                 <div id="works-category-blks">
                   <a href="#websites-wrap" class="active">WEBSITES</a>
                   <a href="#webapps-wrap">WEB-APPS</a>
+                  <a href="#mockups-wrap">MOCKUPS</a>
                   <div class="slide-line"></div>
                 </div>
                 <div class="works-category">
@@ -439,6 +440,14 @@
                     class="block-wrap"
                     style="display: none"
                   ></div>
+                  <div id="mockups-wrap" style="display: none">
+                    <div class="vk-info-wrap">
+                      <img
+                        src="images/coming-soon.png"
+                        alt="coming soon icon"
+                      />
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
@@ -507,7 +516,7 @@
     <script src="js/lettering.min.js"></script>
     <!-- Custom script -->
     <script src="js/index.js?v1"></script>
-    <script src="js/data.js?v1"></script>
+    <script src="js/data.js?v2"></script>
 
     <!--Start of Tawk.to Script-->
     <script type="text/javascript">
