--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       crossorigin="anonymous"
     ></script>
     <!-- Custom Stylesheet -->
-    <link href="css/main.css?v3" rel="stylesheet" />
+    <link href="css/main.css?v4" rel="stylesheet" />
   </head>
 
   <body>
@@ -119,7 +119,7 @@
     <section id="about" class="about">
       <div class="container">
         <div class="row">
-          <div class="col-lg-6 col-sm-6">
+          <div class="col-xs-12 col-sm-6">
             <h2 class="lines">about</h2>
             <h3 class="subtitle">Who I am</h3>
             <p>
@@ -138,7 +138,7 @@
             </p>
           </div>
 
-          <div class="col-lg-6 col-sm-6">
+          <div class="col-xs-12 col-sm-6">
             <h2 class="lines">services</h2>
             <h3 class="subtitle">What I Bring</h3>
             <ul id="about-list">
@@ -174,7 +174,7 @@
     <section id="skills" class="skills">
       <div class="container">
         <div class="row">
-          <div class="col-lg-6 col-sm-6">
+          <div class="col-xs-12 col-sm-6">
             <div class="section-left">
               <h2 class="lines blue">skillset</h2>
               <h3 class="subtitle mgb40">
@@ -244,7 +244,7 @@
             </div>
           </div>
 
-          <div class="col-lg-6 col-sm-6">
+          <div class="col-xs-12 col-sm-6">
             <div class="section-right">
               <h2 class="lines blue">toolbox</h2>
               <h3 class="subtitle mgb40">What I Use</h3>
@@ -272,126 +272,33 @@
     <section id="history" class="history">
       <div class="container">
         <div class="row">
-          <div class="col-lg-12 col-sm-12">
+          <div class="col-xs-12">
             <h2 class="lines">career and education</h2>
             <h3 class="subtitle">My History</h3>
 
             <div class="row">
-              <!-- Experience section-->
-              <div class="col-lg-6 col-sm-6">
+              <!-- Experience section -->
+              <div class="col-xs-12 col-sm-6">
                 <h3 class="credentials">experience</h3>
-                <div class="exp-wrap animated">
-                  <!-- experience 1 -->
-                  <div class="exp">
-                    <div class="exp-icon">
-                      <i class="fa-mine fa fa-desktop"></i>
-                    </div>
-                    <div class="exp-head">
-                      <p class="time-frame">2016 - PRESENT</p>
-                      <h3>
-                        <a
-                          href="https://www.six30labs.io/"
-                          target="_blank"
-                          class="linkout"
-                          >Six30 Labs</a
-                        >
-                      </h3>
-                      <h4>Software Engineer/ Principal Engineer</h4>
-                    </div>
-                  </div>
-
-                  <!-- experience 2 -->
-                  <div class="exp">
-                    <div class="exp-icon">
-                      <i class="fa-mine fa fa-desktop"></i>
-                    </div>
-                    <div class="exp-head">
-                      <p class="time-frame">2016</p>
-                      <h3>
-                        <a
-                          href="https://www.internetacademy.co.in"
-                          target="_blank"
-                          class="linkout"
-                          >Internet Academy (W3C Member)</a
-                        >
-                      </h3>
-                      <h4>Front-end Developer and Instructor</h4>
-                    </div>
-                  </div>
-
-                  <!-- experience 3 -->
-                  <div class="exp">
-                    <div class="exp-icon">
-                      <i class="fa-mine fa fa-desktop"></i>
-                    </div>
-                    <div class="exp-head">
-                      <p class="time-frame">2015</p>
-                      <h3>
-                        <a
-                          href="https://www.nagra.com"
-                          target="_blank"
-                          class="linkout"
-                          >Kudelski Group</a
-                        >
-                      </h3>
-                      <h4>Software Engineer</h4>
-                    </div>
-                  </div>
-                </div>
+                <div class="exp-wrap animated" id="exp-wrap"></div>
               </div>
 
               <!-- Education -->
-              <div class="col-lg-6 col-sm-6">
+              <div class="col-xs-12 col-sm-6">
                 <h3 class="credentials">education</h3>
-                <div class="timeline-wrap">
-                  <!-- Graduation 1 -->
-                  <div class="timeline-block">
-                    <div class="timeline-icon">
-                      <i class="fa-mine fa fa-graduation-cap"></i>
-                    </div>
-                    <div class="exp-head">
-                      <p class="time-frame">2008 - 2010</p>
-                      <h3>St. Joseph's College</h3>
-                      <h4>Computer Science</h4>
-                    </div>
-                    <div class="specialisation">
-                      <p>
-                        Graduated from St. Joseph's Pre-University College with
-                        a Major in Computer Science.
-                      </p>
-                    </div>
-                  </div>
-
-                  <!-- Graduation 2 -->
-                  <div class="timeline-block mgb80">
-                    <div class="timeline-icon">
-                      <i class="fa-mine fa fa-graduation-cap"></i>
-                    </div>
-                    <div class="exp-head">
-                      <p class="time-frame">2010 - 2014</p>
-                      <h3>HKBK College of Engineering</h3>
-                      <h4>Computer Science &amp; Engineering</h4>
-                    </div>
-                    <div class="specialisation">
-                      <p>
-                        Graduated from HKBKCE with a Major in Computer Science
-                        &amp; Engineering.
-                      </p>
-                    </div>
-                  </div>
-                </div>
+                <div class="timeline-wrap" id="edu-wrap"></div>
               </div>
             </div>
 
             <div class="row">
               <!-- Certifications -->
-              <div class="col-lg-6 col-sm-6">
+              <div class="col-xs-12 col-sm-6">
                 <h3 class="credentials">certifications</h3>
                 <div class="timeline-wrap" id="cert-wrap"></div>
               </div>
 
               <!-- Awards -->
-              <div class="col-lg-6 col-sm-6">
+              <div class="col-xs-12 col-sm-6">
                 <h3 class="credentials">awards</h3>
                 <div class="timeline-wrap" id="awards-wrap"></div>
               </div>
@@ -515,11 +422,11 @@
     <!-- uideveloper -->
     <script src="js/lettering.min.js"></script>
     <!-- Custom script -->
-    <script src="js/index.js?v1"></script>
-    <script src="js/data.js?v2"></script>
+    <script src="js/index.js?v2"></script>
+    <script src="js/data.js?v3"></script>
 
     <!--Start of Tawk.to Script-->
-    <script type="text/javascript">
+    <script>
       var Tawk_API = Tawk_API || {},
         Tawk_LoadStart = new Date();
       (function () {
