Project, Tools & basic info updation

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
               specialize in developing user interfaces, my attention to detail
               is extreme and I love to continually learn what’s new all things
               design related. I thrive in a creative environment and prefer
-              teamwork, but I can function independently too. With 5+ years of
+              teamwork, but I can function independently too. With 8+ years of
               working experience in UI development, I aspire to experience as
               much as I can as well as continue to grow and evolve along with
               the organization.
@@ -143,7 +143,7 @@
             <h3 class="subtitle">What I Bring</h3>
             <ul id="about-list">
               <li>
-                5+ years of experience in designing, implementing and deploying
+                8+ years of experience in designing, implementing and deploying
                 software solutions.
               </li>
               <li>
@@ -255,11 +255,11 @@
                   Figma, InVision, Adobe XD, Adobe Photoshop, Adobe Illustrator
                 </li>
                 <li>Bitbucket, Git, GitBash, GitHub, GitLab</li>
-                <li>XAMPP</li>
-                <li>Fiddler, Proto, Principle, MJML, Chrome Dev Tools</li>
+                <li>XAMPP, Postman, Vite, Jest, Netlify</li>
+                <li>Fiddler, Proto, Principle, Chrome Dev Tools, Redux DevTools</li>
                 <li>Pine tools, CodePen, Flaticons, WAVE, Npm</li>
-                <li>Pingdom, GTmetrix, Google Analytics</li>
-                <li>Teams, Slack, Trello</li>
+                <li>Pingdom, GTmetrix, Google Analytics, Lighthouse</li>
+                <li>Teams, Slack, Trello, Asana</li>
                 <li>MS Office Suite, Google Docs</li>
               </ul>
             </div>
@@ -377,7 +377,7 @@
 
             <ul id="social">
               <li>
-                <a href="https://in.linkedin.com/in/vinodhvk44" target="_blank"
+                <a href="https://www.linkedin.com/in/vinodhmvk" target="_blank"
                   ><i class="fa fa-linkedin-square fa-fw fa-2x"></i
                 ></a>
               </li>
